@startuml

'---- Core Layer ----
package Core {

    '---- Domain Layer ----
    package Domain {
        package Users {  
            class User {
                + string Name
                + int Age
            }
        }
    }

    '---- Application Layer ----
    package Application {   
        package Common{
            package Data {
                interface IUsersRepository
                IUsersRepository ..> User
            }
        }
    
        package Features {
            package Users {  
                package Commands {
                        class AddUserCommand {
                            + Name
                            + Age
                        }
                        class AddUserCommandHandler {
                            + Task Execute(AddUserCommand request)
                        }
                        AddUserCommandHandler *-down-> IUsersRepository
                        AddUserCommandHandler .down.> AddUserCommand
                    }    
                }
            }
        }
}

'---- Infrastructure Layer ----
package Infrastructure {
    package Data {
        package Features {
            package Users {        
                class UsersRepository {
                    + Task<User> AddUser(AddUserRequest request)
                }        
                UsersRepository -up-|> Core.Application.Common.Data.IUsersRepository
                UsersRepository .down.> Core.Domain.Users.User
                UsersRepository .down.> UserDto
                UsersRepository .down.> UsersMapper
                
                class UserDto {
                    + Id
                    + Name
                    + Age
                    + CreatedAt
                    + IsDeleted
                } 
                
                class UsersMapper{
                    + ToDto
                    + ToDomainModel
                } 
                UsersMapper .down.> UserDto
                UsersMapper .down.> User

            } 
        }
    }
}

class CommandProcessor
CommandProcessor -down-> Core.Application.Features.Users.Commands.AddUserCommandHandler

'---- Desktop Layer ----
package UI {
    package Features {
        package Users {
            class UsersViewModel {}
            UsersViewModel *-down-> CommandProcessor
            UsersViewModel .down.> Core.Application.Features.Users.Commands.AddUserCommand

        }
    }
}
@enduml